# robotic_arm

./: Analysis.md  README.md
robotic_arm/: CMakeLists.txt
robotic_arm/include/: MLSolver.h  RobotArm.h  TrajectoryPlanner.h
robotic_arm/models/: ik_model.onnx  ik_model.onnx.data
robotic_arm/scripts/: generate_data.py  requirements.txt  train_model.py  visualization_arm.py
robotic_arm/src/: MLSolver.cpp  RobotArm.cpp  TrajectoryPlanner.cpp  main.cpp
